Fixed password detail action buttons alignment

--- a/client/src/components/modal/view/PasswordDetail.scss
+++ b/client/src/components/modal/view/PasswordDetail.scss
@@ -22,7 +22,9 @@
 
     .Password__Detail__Actions {
       display: flex;
+      justify-content: flex-end;
       flex: 1;
+      margin-right: 10px;
       gap: 5px;
 
       div {
